[package]
name = "nargun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
anyhow = "1.0.61"
bendy = "0.3.3"
openssl = "0.10.41"
futures = "0.3.24"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
urlencoding = "2.1.0"