[package]
name = "nargun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
bendy = { version="0.4.0-beta.2",features = ["std", "serde"] }
bincode = "1.3.3"
bytes = "1.2.1"
clap = { version = "4.0.32", features = ["derive"] }
console-subscriber = "0.1.8"
futures = "0.3.24"
openssl = "0.10.41"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_warn"] }
tracing-subscriber = "0.3.16"
tracing-test = "0.2.3"
urlencoding = "2.1.0"

[features]
verbose = []